# secure-delete

./: .gitignore  Cargo.toml  HANDOFF.md  PLAN.md  README.md  SAFETY.md  pyproject.toml
.github/workflows/: build-release.yml  ci.yml
src/: crypto.rs  detect.rs  freespace.rs  install.rs  keyroot.rs  lib.rs  main.rs  overwrite.rs  sanitize.rs  status.rs  vault.rs
src/secure_delete/: __init__.py  cli.py  detect.py  engine.py  guards.py  methods.py  result.py
tests/: install.rs  keyroot.rs  keyroot_linux.rs  test_engine_dryrun.py  test_engine_routing.py  test_execute_real.py  test_guards.py  test_result.py  vault.rs  vault_tpm.rs
