[package]
name = "secure-delete"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "Honest secure deletion + a per-file crypto-erase vault (destroy the key, not the bytes)."
authors = ["LxveAce"]
repository = "https://github.com/LxveAce/secure-delete"

[dependencies]
clap = { version = "4", default-features = false, features = ["std", "derive", "help", "usage", "error-context"] }
aes-gcm = "0.10"
argon2 = "0.5"
getrandom = "0.2"
zeroize = { version = "1", features = ["zeroize_derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
anyhow = "1"

[lib]
name = "secure_delete"
path = "src/lib.rs"

[[bin]]
name = "secure-delete"
path = "src/main.rs"

[profile.release]
opt-level = 3
strip = true
