[project]
name = "secure-delete"
version = "0.1.0"
description = "Secure-deletion primitive (crypto-erase-first, honest per-device claims). SCAFFOLD — no destructive code."
requires-python = ">=3.10"
authors = [{ name = "LxveAce" }]
license = { text = "MIT" }
readme = "README.md"

[project.scripts]
secure-delete = "secure_delete.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
